# fatsecret-mcp

./: .gitignore  README.md  package-lock.json  package.json
.cursor/: mcp.json
.cursor/rules/: context7-documentation-first.mdc  fatsecret-package-exploration.mdc  python-mcp-framework.mdc  python-port-standards.mdc
docs/plans/: 2026-02-28-python-port-design.md  2026-02-28-python-port-implementation-plan.md  2026-02-28-python-port-phase2-tools.md
javascript/: package-lock.json  package.json  tsconfig.json
javascript/src/: cli.ts  index.ts
javascript/utils/: test-date-conversion.js  test-interactive.js  test-mcp.js
python/: README.md  pyproject.toml
python/scripts/: call_server.py
python/src/fatsecret_mcp/: __init__.py  api.py  config.py  dates.py  oauth.py  server.py
python/src/fatsecret_mcp_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/tests/: test_api.py  test_config.py  test_dates.py  test_integration_smoke.py  test_oauth.py  test_server_smoke.py  test_server_tools.py
src/: index.ts
