[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fatsecret-mcp-python"
version = "0.1.0"
description = "Python FastMCP server for the FatSecret API"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastmcp>=3,<4",
  "httpx>=0.28,<1",
  "fatsecret>=0.5.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
fatsecret-mcp = "fatsecret_mcp.server:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
